--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Josienpset3</string>
+    <string name="add_text">ADD</string>
+    <string name="hint_edittext">Add your to-do here</string>
+    <string name="information_text">Long-press an item to delete it</string>
 </resources>
